--- a/TaskScheduler.csproj
+++ b/TaskScheduler.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.12.0" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.12.0" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.12.0" />
+  </ItemGroup>
+
 </Project>
