--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqTransport": {
+    "Host": "localhost",
+    "VHost": "/",
+    "User": "guest",
+    "Pass": "guest"
+  },
+  "QuartzEndpoint": {
+    "QueueName": "quartz",
+    "PrefetchCount": 17
+  },
+  "ConnectionStrings": {
+    "quartz": "Server=tcp:localhost;Database=quartznet;Persist Security Info=False;User ID=sa;Password=Quartz!DockerP4ss;Encrypt=False;TrustServerCertificate=True;"
+  }
 }
